AKS-Deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engportalapi
  labels:
    app: engportalapi
spec:
  selector:
    matchLabels:
      app: engportalapi
  replicas: 2
  template:
    metadata:
      labels:
        app: engportalapi
    spec:
      containers:
        - name: engportalapi
          image: portalapicontainer.azurecr.io/portalapi:${GITHUB_SHA}
          ports:
          - containerPort: 5000
