deployment.yaml
# deployment.yaml - local deployment test with MiniKube
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engportalapi
spec:
  selector:
    matchLabels:
      app: engportalapi
  replicas: 1
  template:
    metadata:
      labels:
        app: engportalapi
    spec:
      containers:
        - name: portalapi
          image: portalapi:prod
          imagePullPolicy: Never
          ports:
          - containerPort: 80
