AKS-Service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engportalapi
spec:
  type: LoadBalancer
  selector:
    app: engportalapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
